<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".SignupActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <EditText
            android:id="@+id/fname"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/et_bg"
            android:hint="First Name"
            android:inputType="text"
            android:padding="16dp"
            android:textColorHint="@color/login_form_details"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/lname"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/et_bg"
            android:hint="Last Name"
            android:inputType="text"
            android:padding="16dp"
            android:textColorHint="@color/login_form_details"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/fname" />

        <EditText
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/et_bg"
            android:hint="Address"
            android:inputType="text"
            android:padding="16dp"
            android:textColorHint="@color/login_form_details"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/lname" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/et_bg"
            android:hint="Phone number"
            android:inputType="text"
            android:padding="16dp"
            android:textColorHint="@color/login_form_details"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/address" />
        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/et_bg"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColorHint="@color/login_form_details"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/phone" />
        <EditText
            android:id="@+id/susername"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/et_bg"
            android:hint="Username"
            android:inputType="text"
            android:padding="16dp"
            android:textColorHint="@color/login_form_details"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/email" />
        <EditText
            android:id="@+id/spassword"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/et_bg"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColorHint="@color/login_form_details"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/susername" />

        <EditText
            android:id="@+id/cpassword"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/et_bg"
            android:hint="Confirm Password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColorHint="@color/login_form_details"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/spassword" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="68dp"
            android:background="@drawable/btn_bg"
            android:text="Register"
            android:textAllCaps="false"
            android:textColor="@color/login_button"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spassword" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="I accept the terms and condition"
            android:textColor="@color/login_button"
            app:layout_constraintTop_toBottomOf="@+id/btn_signup"
            tools:layout_editor_absoluteX="16dp" />

        <View
            android:id="@+id/footer_line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:background="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/checkBox"/>

        <TextView
            android:id="@+id/tvlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an Account? Login"
            android:textColor="@color/login_form_details"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/footer_line" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>